tests/snapshots/examples_fixtures/type_system__failing__175_handle_arm_missing_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/175_handle_arm_missing_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `->` in handle arm.

  --> examples/type_system/failing/175_handle_arm_missing_arrow.flx:1:42
  |
1 | let x = 1 handle IO { print(resume, msg) resume(msg) }
  |                                          ^^^^^^

Hint:
  Handle arms use `op(resume, arg1, ...) -> body`.
== stdout ==
<not executed>
